--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Англо-русский/русско-английский словарь frontend-разработчика</title>
+        <title>Словарь frontend-разработчика</title>
         <meta charset="utf-8">
     </head>
     <body>
