--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Словарь frontend-разработчика</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <div class="loading">Loading...</div>
@@ -16,7 +17,7 @@
         	<tbody></tbody>
         </table>
         <script src="jquery-2.1.4.min.js" type="text/javascript"></script>
-        <script src="jquery.tablesorter.min.js" type="text/javascript"></script>
+        <script src="jquery.tablesorter.combined.js" type="text/javascript"></script>
         <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
