Added basic styling

--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
     <head>
         <title>Словарь frontend-разработчика</title>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" сontent="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     </head>
     <body>
         <div class="loading">Loading...</div>
         <table class="dictionary">
-        	<thead>
-        	    <tr>
-        			<th>По-русски</th>
-        			<th>English</th>
-        	    </tr>
-        	</thead>
-        	<tbody></tbody>
+            <thead>
+                <tr>
+                    <th>По-русски</th>
+                    <th>English</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
         </table>
         <script src="js/jquery-2.1.4.min.js" type="text/javascript"></script>
         <script src="js/jquery.tablesorter.combined.js" type="text/javascript"></script>
