--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <table class="dictionary">
             <thead>
                 <tr>
-                    <th>По-русски</th>
-                    <th>English</th>
+                    <th><span>По-русски</span><i class="fa fa-caret-down"></i><i class="fa fa-caret-up"></i></th>
+                    <th><span>English</span><i class="fa fa-caret-down"></i><i class="fa fa-caret-up"></i></th>
                 </tr>
             </thead>
             <tbody></tbody>
