Added title, link to repo; removed click event listener

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     </head>
     <body>
+        <h1>Словарь frontend-разработчика <a href="https://github.com/undeletable/fe-ru-en-dictionary" target="_blank" title="Source on GitHub"><i class="fa fa-github"></i></a></h1>
         <div class="loading">Loading...</div>
         <table class="dictionary">
             <thead>
