Refined some styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <h1>Словарь frontend-разработчика <a href="https://github.com/undeletable/fe-ru-en-dictionary" target="_blank" title="Source on GitHub"><i class="fa fa-github"></i></a></h1>
-        <div class="loading">Loading...</div>
+        <div class="loading"><i class="fa fa-spinner fa-pulse"></i> Loading...</div>
         <table class="dictionary">
             <thead>
                 <tr>
