Added hover styling for table headings

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <table class="dictionary">
             <thead>
                 <tr>
-                    <th><span>По-русски</span><i class="fa fa-caret-down"></i><i class="fa fa-caret-up"></i></th>
-                    <th><span>English</span><i class="fa fa-caret-down"></i><i class="fa fa-caret-up"></i></th>
+                    <th><span class="header-clickable">По-русски</span><i class="fa fa-caret-down header-clickable"></i><i class="fa fa-caret-up header-clickable"></i></th>
+                    <th><span class="header-clickable">English</span><i class="fa fa-caret-down header-clickable"></i><i class="fa fa-caret-up header-clickable"></i></th>
                 </tr>
             </thead>
             <tbody></tbody>
